update/add readers, begin custom readers